[tool.poetry]
name = "snake-game"
version = "0.1.0"
description = "Snake game using AI"
authors = ["Crossedfall <ping@crossedfall.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
